--- a/docs/components/organization/organization-list.mdx
+++ b/docs/components/organization/organization-list.mdx
@@ -14,12 +14,25 @@ description: The <OrganizationList /> component is used to display organization 
 
 The `<OrganizationList />` component is used to display organization related memberships, invitations, and suggestions for the user.
 
-## Usage
+## `<OrganizationList />` properties
+
+All props below are optional.
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `hidePersonal` | `boolean` | By default, users can switch between organization and their personal account. This option controls whether `<OrganizationList />` will include the user's personal account in the organization list. Setting this to `false` will hide the personal account entry, and users will only be able to switch between organizations. <br />Defaults to `false`. |
+| `skipInvitationScreen` | `boolean` \| `undefined` | Hides the screen for sending invitations after an organization is created. When left undefined Clerk will automatically hide the screen if the number of max allowed members is equal to 1.<br />Defaults to `false`. |
+| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
+| `afterCreateOrganizationUrl` | <code>((org: [Organization][org-ref]) => string)</code> \| `string` | Full URL or path to navigate after creating a new organization. |
+| `afterSelectOrganizationUrl` | <code>((org: [Organization][org-ref]) => string)</code> \| `string` | Full URL or path to navigate after selecting an organization.<br />Defaults to `undefined`. |
+| `afterSelectPersonalUrl` | <code>((org: [Organization][org-ref]) => string)</code> \| `string` | Full URL or path to navigate after selecting the personal account.<br />Defaults to `undefined`. |
+
+## How to use the `<OrganizationList />` component
 
 <Tabs type="framework" items={["Next.js", "React", "Remix"]}>
   <Tab>
     <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
-    ```jsx copy filename="/app/discover/page.[jsx/tsx]"
+    ```jsx copy filename="/app/discover/page.tsx"
     import { OrganizationList } from "@clerk/nextjs";
 
     export default function OrganizationListPage() {
@@ -33,7 +46,7 @@ The `<OrganizationList />` component is used to display organization related mem
     }
     ```
 
-    ```jsx copy filename="/pages/discover.[jsx/tsx]"
+    ```jsx copy filename="/pages/discover.tsx"
     import { OrganizationList } from "@clerk/nextjs";
 
     export default function OrganizationListPage() {
@@ -84,7 +97,8 @@ The `<OrganizationList />` component is used to display organization related mem
 
 ### Force organizations
 
-If you would like to prohibit people from using their personal accounts and force them to be part of an organization, the `hidePersonal` property forces your user to join or create an organization in order to continue.
+If you would like to prohibit people from using their personal accounts and force them to be part of an organization, the `hidePersonal` property forces your user to join or create an organization in order to continue. For more information on how to hide Personal Accounts and force organizations, see the [dedicated guide](/docs/guides/force-organizations).
+
 ```tsx copy filename="organization-portal.tsx"
 export default function OrganizationListPage() {
   return (
@@ -96,20 +110,7 @@ export default function OrganizationListPage() {
 };
 ```
 
-## Properties
-
-All props below are optional.
-
-| Name | Type | Description |
-| --- | --- | --- |
-| `hidePersonal` | `boolean` | By default, users can switch between organization and their personal account. This option controls whether `<OrganizationList />` will include the user's personal account in the organization list. Setting this to `false` will hide the personal account entry, and users will only be able to switch between organizations. <br />Defaults to `false`. |
-| `skipInvitationScreen` | `boolean` \| `undefined` | Hides the screen for sending invitations after an organization is created. When left undefined Clerk will automatically hide the screen if the number of max allowed members is equal to 1.<br />Defaults to `false`. |
-| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
-| `afterCreateOrganizationUrl` | <code>((org: [Organization][org-ref]) => string)</code> \| `string` | Full URL or path to navigate after creating a new organization. |
-| `afterSelectOrganizationUrl` | <code>((org: [Organization][org-ref]) => string)</code> \| `string` | Full URL or path to navigate after selecting an organization.<br />Defaults to `undefined`. |
-| `afterSelectPersonalUrl` | <code>((org: [Organization][org-ref]) => string)</code> \| `string` | Full URL or path to navigate after selecting the personal account.<br />Defaults to `undefined`. |
-
-## Customization
+## How to customize the `<OrganizationList />` component
 
 To learn about how to customize Clerk components, see the [customization documentation](/docs/components/customization/overview).
 
