--- a/docs/references/backend/user/update-user.mdx
+++ b/docs/references/backend/user/update-user.mdx
@@ -12,7 +12,7 @@ The provided ID must be valid, otherwise an error will be thrown.
 ```tsx
 const userId = 'my-user-id';
 
-const params = { firstName: 'John', lastName: 'Wick' }; 
+const params = { firstName: 'John', lastName: 'Wick' };
 
 const user = await clerkClient.users.updateUser(userId, params);
 ```
@@ -39,7 +39,7 @@ const user = await clerkClient.users.updateUser(userId, params);
 <Tabs type="framework" items={["Next.js", "Node", "Remix"]}>
   <Tab>
     <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
-    ```tsx filename="app/page.[jsx/tsx]"
+    ```tsx filename="app/page.tsx"
     import { NextRequest, NextResponse } from 'next/server';
     import { getAuth, clerkClient } from '@clerk/nextjs/server';
 
@@ -60,7 +60,7 @@ const user = await clerkClient.users.updateUser(userId, params);
     }
     ```
 
-    ```tsx filename="pages/api/updateUser.[jsx/tsx]"
+    ```tsx filename="pages/api/updateUser.tsx"
     import { clerkClient, getAuth } from '@clerk/nextjs/server';
     import type { NextApiRequest, NextApiResponse } from 'next';
 
@@ -94,7 +94,7 @@ const user = await clerkClient.users.updateUser(userId, params);
     // Optionally ClerkExpressWithAuth returns an empty user with no error
     // ClerkExpressWithAuth(),
     async (req, res) => {
-    
+
       // Get the user ID from req.auth
       const userId = req.auth.userId
 
@@ -109,13 +109,13 @@ const user = await clerkClient.users.updateUser(userId, params);
   </Tab>
 
   <Tab>
-  ```js filename="app/routes/profile.[jsx/tsx]"
+  ```js filename="app/routes/profile.tsx"
   import { createClerkClient } from "@clerk/remix/api.server"
   import { getAuth } from "@clerk/remix/ssr.server"
   import { ActionFunction, json } from "@remix-run/node"
 
   export const action: ActionFunction = async (req) => {
-    
+
     // Get the user ID from the session
     const { userId } = await getAuth(req)
 
