--- a/docs/references/javascript/clerk/sign-up.mdx
+++ b/docs/references/javascript/clerk/sign-up.mdx
@@ -28,15 +28,29 @@ function mountSignUp(node: HTMLDivElement, props?: SignUpProps): void;
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `node ` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the [`<SignUp />`][signup-ref] component |
-| `props?` | [`SignUpProps`](#sign-up-props) | The properties to pass to the [`<SignUp />`][signup-ref] component |
+| `node ` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the `<SignUp />` component |
+| `props?` | [`SignUpProps`](#sign-up-props) | The properties to pass to the `<SignUp />` component. |
+
+#### `SignUpProps`
+
+The type of the `props` parameter in the `mountSignUp()` function is defined as follows:
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages.<br />Note: If you are using environment variables for Next.js or Remix to specify your routes, this will be set to `path`. |
+| `path` | `string` | The path where the component is mounted on when path-based routing is used.<br />`/sign-in`<br />This prop is ignored in hash- and virtual-based routing. |
+| `redirectUrl` | `string` | Full URL or path to navigate after successful sign in or sign up.<br /> The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
+| `afterSignInUrl` | `string` | The full URL or path to navigate after a successful sign in. Defaults to `/`. |
+| `signInUrl` | `string` | Full URL or path to the sign in page. Use this property to provide the target of the 'Sign In' link that's rendered. |
+| `afterSignUpUrl` | `string` | The full URL or path to navigate after a successful sign up. Defaults to `/`. |
+| `initialValues` | [`SignUpInitialValues`](/docs/references/javascript/types/sign-up-initial-values) | The values used to prefill the sign-up fields with. |
 
 ### `mountSignUp()` usage
 
 <InjectKeys>
 
 <CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript {15-19}
+  ```typescript filename="index.ts" {15-19}
   import Clerk from '@clerk/clerk-js';
   import { dark } from "@clerk/themes";
 
@@ -60,20 +74,21 @@ function mountSignUp(node: HTMLDivElement, props?: SignUpProps): void;
   });
   ```
 
-  ```html {13-17}
+  ```html filename="index.js" {13-17}
+  <!-- Add a <div id="sign-up"> element to your HTML -->
   <div id="sign-up"></div>
   <script>
     // Get this URL and Publishable Key from the Clerk Dashboard
     const clerkPublishableKey = {{pub_key}};
-    const frontendApi = '[your-domain].clerk.accounts.dev';
+    const frontendApiUrl = 'https://[your-domain].clerk.accounts.dev';
     const version = '@latest'; // Set to appropriate version
 
     // Creates asynchronous script
     const script = document.createElement('script');
-    script.setAttribute('data-clerk-frontend-api', frontendApi);
+    script.setAttribute('data-clerk-frontend-api', frontendApiUrl);
     script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
     script.async = true;
-    script.src = `https://${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+    script.src = `${frontendApiUrl}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
 
     script.addEventListener('load', async function () {
       await window.Clerk.load();
@@ -112,9 +127,10 @@ function unmountSignUp(node: HTMLDivElement): void;
 <InjectKeys>
 
 <CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript {19}
+  ```typescript filename="index.ts" {19}
   import Clerk from '@clerk/clerk-js';
 
+  // Selects for <div id="app"> and adds a <div id="sign-up"> to it
   document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
     <div
       id="sign-up"
@@ -134,20 +150,21 @@ function unmountSignUp(node: HTMLDivElement): void;
   clerk.unmountSignUp(signUpComponent);
   ```
 
-  ```html {17}
+  ```html filename="index.js" {17}
+  <!-- Add a <div id="sign-up"> element to your HTML -->
   <div id="sign-up"></div>
   <script>
     // Get this URL and Publishable Key from the Clerk Dashboard
     const clerkPublishableKey = {{pub_key}};
-    const frontendApi = '[your-domain].clerk.accounts.dev';
+    const frontendApiUrl = 'https://[your-domain].clerk.accounts.dev';
     const version = '@latest'; // Set to appropriate version
 
     // Creates asynchronous script
     const script = document.createElement('script');
-    script.setAttribute('data-clerk-frontend-api', frontendApi);
+    script.setAttribute('data-clerk-frontend-api', frontendApiUrl);
     script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
     script.async = true;
-    script.src = `https://${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+    script.src = `${frontendApiUrl}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
 
     script.addEventListener('load', async function () {
       await window.Clerk.load();
@@ -186,7 +203,7 @@ function openSignUp(props?: SignUpProps): void;
 <InjectKeys>
 
 <CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```js filename="index.js" {7-11}
+  ```js filename="index.ts" {7-11}
   import Clerk from '@clerk/clerk-js';
   import { dark } from "@clerk/themes";
 
@@ -205,15 +222,15 @@ function openSignUp(props?: SignUpProps): void;
   <script>
     // Get this URL and Publishable Key from the Clerk Dashboard
     const clerkPublishableKey = {{pub_key}};
-    const frontendApi = '[your-domain].clerk.accounts.dev';
+    const frontendApiUrl = 'https://[your-domain].clerk.accounts.dev';
     const version = '@latest'; // Set to appropriate version
 
     // Creates asynchronous script
     const script = document.createElement('script');
-    script.setAttribute('data-clerk-frontend-api', frontendApi);
+    script.setAttribute('data-clerk-frontend-api', frontendApiUrl);
     script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
     script.async = true;
-    script.src = `https://${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+    script.src = `${frontendApiUrl}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
 
     script.addEventListener('load', async function () {
       await window.Clerk.load();
@@ -244,7 +261,7 @@ function closeSignUp(): void;
 <InjectKeys>
 
 <CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript {11}
+  ```typescript filename="index.ts" {11}
   import Clerk from '@clerk/clerk-js';
   import { dark } from "@clerk/themes";
 
@@ -259,19 +276,19 @@ function closeSignUp(): void;
   clerk.closeSignUp();
   ```
 
-  ```html {14}
+  ```html filename="index.js" {14}
   <script>
     // Get this URL and Publishable Key from the Clerk Dashboard
     const clerkPublishableKey = {{pub_key}};
-    const frontendApi = '[your-domain].clerk.accounts.dev';
+    const frontendApiUrl = 'https://[your-domain].clerk.accounts.dev';
     const version = '@latest'; // Set to appropriate version
 
     // Creates asynchronous script
     const script = document.createElement('script');
-    script.setAttribute('data-clerk-frontend-api', frontendApi);
+    script.setAttribute('data-clerk-frontend-api', frontendApiUrl);
     script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
     script.async = true;
-    script.src = `https://${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+    script.src = `${frontendApiUrl}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
 
     script.addEventListener('load', async function () {
       await window.Clerk.load();
@@ -288,19 +305,5 @@ function closeSignUp(): void;
 </CodeBlockTabs>
 
 </InjectKeys>
-
-## `SignUpProps`
-
-All props below are optional.
-
-| Name | Type | Description |
-| --- | --- | --- |
-| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages.<br />Note: If you are using environment variables for Next.js or Remix to specify your routes, this will be set to `path`. |
-| `path` | `string` | The path where the component is mounted on when path-based routing is used.<br />`/sign-in`<br />This prop is ignored in hash- and virtual-based routing. |
-| `redirectUrl` | `string` | Full URL or path to navigate after successful sign in or sign up.<br /> The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
-| `afterSignInUrl` | `string` | The full URL or path to navigate after a successful sign in. Defaults to `/`. |
-| `signInUrl` | `string` | Full URL or path to the sign in page. Use this property to provide the target of the 'Sign In' link that's rendered. |
-| `afterSignUpUrl` | `string` | The full URL or path to navigate after a successful sign up. Defaults to `/`. |
-| `initialValues` | [`SignUpInitialValues`](/docs/references/javascript/types/sign-up-initial-values) | The values used to prefill the sign-up fields with. |
 
 [signup-ref]: /docs/components/authentication/sign-up
