--- a/docs/references/javascript/user/user.mdx
+++ b/docs/references/javascript/user/user.mdx
@@ -118,15 +118,15 @@ In the following example, the user's first name is updated to "Test".
   <script>
     // Get your publishable key and frontend API URL from the Clerk Dashboard
     const clerkPublishableKey = `{{pub_key}}`;
-    const frontendApi = 'https://[your-domain].clerk.accounts.dev';
+    const frontendApiUrl = 'https://[your-domain].clerk.accounts.dev';
     const version = '@latest'; // Set to appropriate version
 
     // Creates asynchronous script
     const script = document.createElement('script');
-    script.setAttribute('data-clerk-frontend-api', frontendApi);
+    script.setAttribute('data-clerk-frontend-api', frontendApiUrl);
     script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
     script.async = true;
-    script.src = `${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+    script.src = `${frontendApiUrl}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
 
     // Adds listener to initialize ClerkJS after it's loaded
     script.addEventListener('load', async function () {
@@ -169,7 +169,7 @@ function delete: () => Promise<void>;
   // Initialize Clerk with your Clerk publishable key
   const clerk = new Clerk(`{{pub_key}}`);
   await clerk.load();
-  
+
   if (!clerk.user) {
     // Selects for <div id="app"> and adds a <div id="sign-in"> to it
     document.querySelector<HTMLDivElement>(
@@ -185,18 +185,18 @@ function delete: () => Promise<void>;
   ```
 
   ```html {26}
-  <script> 
+  <script>
     // Get your publishable key and frontend API URL from the Clerk Dashboard
     const clerkPublishableKey = `{{pub_key}}`;
-    const frontendApi = 'https://[your-domain].clerk.accounts.dev';
+    const frontendApiUrl = 'https://[your-domain].clerk.accounts.dev';
     const version = '@latest'; // Set to appropriate version
 
     // Creates asynchronous script
     const script = document.createElement('script');
-    script.setAttribute('data-clerk-frontend-api', frontendApi);
+    script.setAttribute('data-clerk-frontend-api', frontendApiUrl);
     script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
     script.async = true;
-    script.src = `${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+    script.src = `${frontendApiUrl}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
 
     // Adds listener to initialize ClerkJS after it's loaded
     script.addEventListener('load', async function () {
@@ -292,15 +292,15 @@ function getSessions: () => Promise<SessionWithActivities[]>;
   <script>
     // Get your publishable key and frontend API URL from the Clerk Dashboard
     const clerkPublishableKey = `{{pub_key}}`;
-    const frontendApi = 'https://[your-domain].clerk.accounts.dev';
+    const frontendApiUrl = 'https://[your-domain].clerk.accounts.dev';
     const version = '@latest'; // Set to appropriate version
 
     // Creates asynchronous script
     const script = document.createElement('script');
-    script.setAttribute('data-clerk-frontend-api', frontendApi);
+    script.setAttribute('data-clerk-frontend-api', frontendApiUrl);
     script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
     script.async = true;
-    script.src = `${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+    script.src = `${frontendApiUrl}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
 
     // Adds listener to initialize ClerkJS after it's loaded
     script.addEventListener("load", async function () {
@@ -368,11 +368,11 @@ Retrieves all of the organizations the user is a member of.
 <CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
 ```javascript filename="index.js" {7-24}
   import Clerk from '@clerk/clerk-js';
-  
+
   // Initialize Clerk with your Clerk publishable key
   const clerk = new Clerk(`{{pub_key}}`);
   await clerk.load();
-  
+
   const { data } = await clerk.user.getOrganizationMemberships();
 
   /* data is an array that contains an OrganizationMembershipResource, which would look something like this:
@@ -397,16 +397,16 @@ Retrieves all of the organizations the user is a member of.
   <script>
     // Get this URL and Publishable Key from the Clerk Dashboard
     const clerkPublishableKey = `{{pub_key}}`;
-    const frontendApi = 'https://[your-domain].clerk.accounts.dev';
+    const frontendApiUrl = 'https://[your-domain].clerk.accounts.dev';
     const version = '@latest'; // Set to appropriate version
-  
+
     // Creates asynchronous script
     const script = document.createElement('script');
-    script.setAttribute('data-clerk-frontend-api', frontendApi);
+    script.setAttribute('data-clerk-frontend-api', frontendApiUrl);
     script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
     script.async = true;
-    script.src = `${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
-  
+    script.src = `${frontendApiUrl}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+
     // Adds listener to initialize ClerkJS after it's loaded
     script.addEventListener('load', async function () {
       await window.Clerk.load();
