--- a/docs/references/nextjs/server-actions.mdx
+++ b/docs/references/nextjs/server-actions.mdx
@@ -13,7 +13,7 @@ Below are some examples of usage both in Server Components or Client Components.
 
 ### Protect your actions
 
-```tsx filename="actions.[js/ts]"
+```tsx filename="actions.ts"
 import { auth } from '@clerk/nextjs';
 
 export default function AddToCart() {
@@ -43,7 +43,7 @@ export default function AddToCart() {
 
 Current user data is important for data enrichment. You can use the [`currentUser()`](/docs/references/nextjs/current-user) helper to achieve this.
 
-```tsx filename="app/page.[jsx/tsx]"
+```tsx filename="app/page.tsx"
 import { currentUser } from '@clerk/nextjs/server';
 
 export default function AddHobby() {
@@ -85,7 +85,7 @@ When using Client Components, you need to make sure you use prop drilling to ens
 
 #### Server Action code
 
-```tsx filename="actions.[js/ts]"
+```tsx filename="actions.ts"
 'use server'
 import { auth } from '@clerk/nextjs';
 
@@ -102,7 +102,7 @@ export async function addItem(formData: FormData) {
 
 #### Server page
 
-```tsx filename="page.[jsx/tsx]"
+```tsx filename="page.tsx"
 import UI from "./UI";
 import { addItem } from "./actions"
 export default function Hobby() {
@@ -114,7 +114,7 @@ export default function Hobby() {
 
 #### Client Component
 
-```tsx filename="ui.[jsx/tsx]"
+```tsx filename="ui.tsx"
 "use client"
 
 export default function UI({ addItem }) {
@@ -135,7 +135,7 @@ export default function UI({ addItem }) {
 
 #### Server Action Code
 
-```tsx filename="actions.[js/ts]"
+```tsx filename="actions.ts"
 'use server'
 import { currentUser } from "@clerk/nextjs";
 
@@ -158,7 +158,7 @@ export async function addHobby(formData: FormData) {
 
 #### Server Page
 
-```tsx filename="page.[jsx/tsx]"
+```tsx filename="page.tsx"
 import UI from "./ui";
 import { addHobby } from "./actions"
 export default function Hobby() {
@@ -170,7 +170,7 @@ export default function Hobby() {
 
 #### Client Component
 
-```tsx filename="ui.[jsx/tsx]"
+```tsx filename="ui.tsx"
 "use client"
 
 export default function UI({ addHobby }) {
