--- a/docs/references/nextjs/current-user.mdx
+++ b/docs/references/nextjs/current-user.mdx
@@ -7,7 +7,7 @@ description: Use the currentUser() helper to access information about your user 
 
 The `currentUser` helper returns the [`Backend API User`](https://clerk.com/docs/reference/backend-api/tag/Users#operation/GetUser) object of the currently active user. It can be used in Server Components, Route Handlers, and Server Actions. Under the hood, this helper calls `fetch()` so it is automatically deduped per request.
 
-```tsx filename="app/page.[jsx/tsx]"
+```tsx filename="app/page.tsx"
 import { currentUser } from '@clerk/nextjs';
 
 export default async function Page() {
