--- a/docs/references/nextjs/trpc.mdx
+++ b/docs/references/nextjs/trpc.mdx
@@ -35,7 +35,7 @@ Clerk's Next.js SDK gives you access to prebuilt components and hooks, as well a
 
 ### Set environment keys
 
-Below is an example of an `.env.local` file. 
+Below is an example of an `.env.local` file.
 
 **Pro tip!** If you are signed into your Clerk Dashboard, your secret key should become visible by clicking on the eye icon. Otherwise, you can find your keys in the Clerk Dashboard on the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) page.
 
@@ -50,21 +50,24 @@ CLERK_SECRET_KEY={{secret}}
 
 ### Configure middleware
 
-[Middleware](/docs/references/nextjs/auth-middleware) allows you to use Clerk server-side APIs. Create a `middleware.ts` file. If your application uses the `src/` directory, your `middleware.ts` file should be placed inside the `src/` folder. If you are not using a `src/` directory, place the `middleware.ts` file in your root directory.
+Clerk's Middleware allows you to use Clerk server-side APIs. It is useful for protecting routes and accessing user data.
 
-```ts filename="middleware.ts"
-import { authMiddleware } from "@clerk/nextjs";
+1. Create a `middleware.ts` file at the root of your project, or in your `src/` directory if you have one.
+2. In your `middleware.ts`, export Clerk's [`clerkMiddleware()`](/docs/references/nextjs/clerk-middleware) helper:
+  ```tsx filename="middleware.ts"
+  import { clerkMiddleware } from "@clerk/nextjs/server";
 
-export default authMiddleware();
+  export default clerkMiddleware();
 
-export const config = {
-      matcher: ['/((?!.+\\.[\\w]+$|_next).*)', '/', '/(api|trpc)(.*)'],
-};
-```
-
-<Callout>
-  This will protect every page by default, including API routes, and cause a redirect to Clerk's [Account Portal](/docs/account-portal/overview). Read more about Clerk's middleware [here](/docs/references/nextjs/auth-middleware).
-</Callout>
+  export const config = {
+    matcher: [
+      '/((?!.*\\..*|_next).*)', // Don't run middleware on static files
+      '/', // Run middleware on index page
+      '/(api|trpc)(.*)'
+    ], // Run middleware on API routes
+  };
+  ```
+3. By default, `clerkMiddleware` will not protect any routes. All routes are public and you must opt-in to protection for routes. See the [`clerkMiddleware()`](/docs/references/nextjs/clerk-middleware) docs to learn how to protect routes.
 
 </Steps>
 
