--- a/docs/references/react/use-session.mdx
+++ b/docs/references/react/use-session.mdx
@@ -17,7 +17,7 @@ The `useSession()` hook provides access to the current user's [`Session`](/docs/
 
 ## How to use the `useSession()` hook
 
-In the following example, the `useSession()` hook is used to access the `SignIn` object, which has the `lastActiveAt` property on it. The `lastActiveAt` property is used to display the last active time of the current session to the user.
+The following example demonstrates how to use the `useSession()` hook to access the `SignIn` object, which has the `lastActiveAt` property on it. The `lastActiveAt` property is used to display the last active time of the current session to the user.
 
 ```tsx filename="home.tsx"
 import { useSession } from "@clerk/clerk-react";
