--- a/docs/references/react/use-clerk.mdx
+++ b/docs/references/react/use-clerk.mdx
@@ -1,6 +1,6 @@
 ---
 title: useClerk()
-description: The useClerk() hook provides access to the Clerk object, giving you the ability to build alternatives to any Clerk Component.
+description: Clerk's useClerk() hook is used to access the Clerk object, which can be used to build alternatives to any Clerk Component.
 ---
 
 # `useClerk()`
@@ -8,33 +8,24 @@ description: The useClerk() hook provides access to the Clerk object, giving you
 The `useClerk()` hook provides access to the [`Clerk`](/docs/references/javascript/clerk/clerk) object, giving you the ability to build alternatives to any Clerk Component.
 
 <Callout type="warning">
-  This is intended to be used for advanced use cases, like building a completely custom OAuth flow or as an escape hatch for getting access to the [`Clerk`](/docs/references/javascript/clerk/clerk) object.
+  This is intended to be used for advanced use cases, like building a completely custom OAuth flow or as an escape hatch for getting access to the `Clerk` object.
 </Callout>
 
-## Usage
+## `useClerk()` returns
 
-<CodeBlockTabs type="framework" options={["Next.js", "React"]}>
-  ```tsx filename="pages/index.tsx"
-  import { useClerk } from "@clerk/nextjs";
+The `useClerk()` hook returns the `Clerk` object, which includes all the methods and properties listed in the [`Clerk` reference](/docs/references/javascript/clerk/clerk).
 
-  export default function Home() {
-    const clerk = useClerk();
+## How to use the `useClerk()` hook
+
+```tsx filename="home.tsx"
+import { useClerk } from "@clerk/clerk-react";
+
+export default function Home() {
+  const clerk = useClerk();
 
   return <button onClick={() => clerk.openSignIn({})}>Sign in</button>;
-  }
-
-  ```
-
-  ```tsx filename="home.tsx"
-  import { useClerk } from "@clerk/clerk-react";
-
-  export default function Home() {
-    const clerk = useClerk();
-
-    return <button onClick={() => clerk.openSignIn({})}>Sign in</button>;
-  }
-  ```
-</CodeBlockTabs>
+};
+```
 
 
 
