add deprecation warnings

--- a/docs/references/javascript/user/user.mdx
+++ b/docs/references/javascript/user/user.mdx
@@ -73,7 +73,7 @@ All props below are optional.
 | Name | Type | Description |
 | --- | --- | --- |
 | `username` | `string` | The user's username. |
-| `password` (deprecated) | `string` | The user's password.<br />This property is deprecated. This will be removed in the next major version (V5). Please use [`updatePassword(params)`](/docs/references/javascript/user/password-management#update-password) instead. |
+| `password` (deprecated) | `string` | The user's password.<br />This property is deprecated. This will be removed in the next major version (Core 2). Please use [`updatePassword(params)`](/docs/references/javascript/user/password-management#update-password) instead. |
 | `firstName` | `string` | The user's first name. |
 | `lastName` | `string` | The user's last name. |
 | `primaryEmailAddressId` | `string` | The unique identifier for the [`EmailAddress`][email-ref] that the user has set as primary. |
@@ -170,7 +170,7 @@ function delete: () => Promise<void>;
   // Initialize Clerk with your Clerk publishable key
   const clerk = new Clerk(`{{pub_key}}`);
   await clerk.load();
-  
+
   if (!clerk.user) {
     // Selects for <div id="app"> and adds a <div id="sign-in"> to it
     document.querySelector<HTMLDivElement>(
@@ -186,7 +186,7 @@ function delete: () => Promise<void>;
   ```
 
   ```html {26}
-  <script> 
+  <script>
     // Get your publishable key and frontend API URL from the Clerk Dashboard
     const clerkPublishableKey = `{{pub_key}}`;
     const frontendApi = 'https://[your-domain].clerk.accounts.dev';
