--- a/docs/references/backend/client/get-client-list.mdx
+++ b/docs/references/backend/client/get-client-list.mdx
@@ -1,11 +1,13 @@
 ---
-title: getClientList()
+title: getClientList() (deprecated)
 description: Retrieves the list of clients.
 ---
 
-# `getClientList()`
+<Callout type="danger">
+  This method is now deprecated.
+</Callout>
 
-Retrieves the list of clients.
+# `getClientList()` (deprecated)
 
 ```tsx
 const clients = await clerkClient.clients.getClientList();
