add email address backend sdk operations

--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -19,7 +19,7 @@ Clerk SDKs expose an instance of the Clerk Backend SDK for use in server environ
   </Tab>
 
   <Tab>
-  The Backend SDK is accessible via the `createClerkClient` function if you are using Remix. 
+  The Backend SDK is accessible via the `createClerkClient` function if you are using Remix.
 
   ```jsx
   import { createClerkClient } from '@clerk/remix/api.server';
@@ -154,13 +154,33 @@ Invitation operations are exposed under `clerkClient.invitations`. The following
 
 - [`revokeInvitation()`](/docs/references/backend/invitations/revoke-invitation)
 
+## Email address operations
+
+A user can be associated with one or more email addresses.
+
+Email address operations are exposed under `clerkClient.emailAddresses`. The following methods are available:
+
+### Email address `get` operations
+
+- [`getEmailAddress()`](/docs/references/backend/email-addresses/get-email-address)
+
+### Email address `create` operations
+
+- [`createEmailAddress()`](/docs/references/backend/email-addresses/create-email-address)
+
+### Email address `update` operations
+
+- [`updateEmailAddress()`](/docs/references/backend/email-addresses/update-email-address)
+
+### Email address `delete` operations
+
+- [`deleteEmailAddress()`](/docs/references/backend/email-addresses/delete-email-address)
+
 ## Email operations
 
-Email operations are exposed under `clerkClient.emails`. The following methods are available:
-
-### Create
-
-- [`createEmail()`](/docs/references/backend/emails/create-email)
+<Callout type="danger">
+  This operation is now deprecated. Clerk no longer supports sending emails through Clerk's backend API.
+</Callout>
 
 ## SMS message operations (deprecated)
 
