--- a/docs/references/react/use-organization-list.mdx
+++ b/docs/references/react/use-organization-list.mdx
@@ -51,13 +51,13 @@ type OrganizationSuggestionStatus = "pending" | "accepted";
 ## `useOrganizationList()` returns
 
 | Name | Type | Description |
-| --- | --- |
+| --- | --- | --- |
 | `isLoaded` | `boolean` | A boolean is set to `false` until Clerk loads and initializes. Once Clerk loads, `isLoaded` will be set to `true`. |
 | `createOrganization()` | <code>(params: [CreateOrganizationParams](#create-organization-params)) => Promise\<[OrganizationResource](/docs/references/javascript/organization/organization)\></code> | A function that returns a `Promise` which resolves to the newly created `Organization`. |
 | `setActive()` | <code>(params: [SetActiveParams](#set-active-params)) => Promise\<void\></code> | A function that sets the active session. | A function that sets the active organization. It accepts either the organization object or the organization id. |
-| `userMemberships` | [Paginated resources](#paginatedresources) | Includes a list of the user's organization memberships. |
-| `userInvitations` | [Paginated resources](#paginatedresources) | Includes a list of the user's organization invitations. |
-| `userSuggestions` | [Paginated resources](#paginatedresources) | Includes a list of suggestions for organizations that the user can join. |
+| `userMemberships` | [`PaginatedResources`](#paginatedresources) | Returns `PaginatedResources` which includes a list of the user's organization memberships. |
+| `userInvitations` | [`PaginatedResources`](#paginatedresources) | Returns `PaginatedResources` which includes a list of the user's organization invitations. |
+| `userSuggestions` | [`PaginatedResources`](#paginatedresources) | Returns `PaginatedResources` which includes a list of suggestions for organizations that the user can join. |
 
 ### `CreateOrganizationParams`
 
