move db errors to allowlist identifiers; move comms errors to identifications

--- a/docs/errors/allowlist-identifiers.mdx
+++ b/docs/errors/allowlist-identifiers.mdx
@@ -4,7 +4,7 @@ description: An index of Clerk errors related to allowlist identifiers.
 type: reference
 ---
 
-# Allowlist identifiers errors 
+# Allowlist identifiers errors
 
 An index of Clerk errors related to allowlist identifiers.
 
@@ -15,5 +15,15 @@ An index of Clerk errors related to allowlist identifiers.
     "shortMessage": "Identifier not found",
     "longMessage":  "No identifier was found with id <identifierID>",
     "code":         "resource_not_found_code"
+}
+```
+
+## `DuplicateAllowlistIdentifier`
+
+```json
+{
+    "shortMessage": "duplicate allowlist identifier",
+    "longMessage":  "the identifier <identifier> already exists",
+    "code":         "duplicate_record_code"
 }
 ```
