--- a/docs/errors/overview.mdx
+++ b/docs/errors/overview.mdx
@@ -17,6 +17,7 @@ description: A breakdown of all Clerk's errors.
 ## [Allowlist identifiers](/docs/errors/allowlist-identifiers)
 
 * [`AllowlistIdentifierNotFound`](/docs/errors/allowlist-identifiers#resource-not-found-code)
+* [`DuplicateAllowlistIdentifier`](/docs/errors/allowlist-identifiers#duplicate-allowlist-identifier)
 
 ## [Application](/docs/errors/application)
 
@@ -76,23 +77,11 @@ description: A breakdown of all Clerk's errors.
 * [`ClientNotFound`](/docs/errors/clients#client-not-found)
 * [`ClientNotFoundInRequest`](/docs/errors/clients#client-not-found-in-request)
 
-## [Comms](/docs/errors/comms)
-
-* [`IdentificationNotFound`](/docs/errors/comms#identification-not-found)
-* [`LastIdentificationDeletionFailed`](/docs/errors/comms#last-identification-deletion-failed)
-* [`LastRequiredIdentificationDeletionFailed`](/docs/errors/comms#last-required-identification-deletion-failed)
-* [`LastIdentificationSetFor2FAFailed`](/docs/errors/comms#last-identification-set-for2-fa-failed)
-* [`LastIdentificaUpdateSecondFactorUnverifiedtionSetFor2FAFailed`](/docs/errors/comms#update-second-factor-unverified)
-
 ## [Cookie](/docs/errors/cookie)
 
 * [`MissingClaims`](/docs/errors/cookie#missing-claims)
 * [`InvalidCookie`](/docs/errors/cookie#invalid-cookie)
 * [`InvalidRotatingToken`](/docs/errors/cookie#linvalid-rotating-token)
-
-## [DB](/docs/errors/db)
-
-* [`DuplicateAllowlistIdentifier`](/docs/errors/db#duplicate-allowlist-identifier)
 
 ## [Deprecation](/docs/errors/deprecation)
 
@@ -118,3 +107,11 @@ description: A breakdown of all Clerk's errors.
 * [`FeatureNotEnabled`](/docs/errors/features#feature-not-enabled)
 * [`NotImplemented`](/docs/errors/features#not-implemented)
 * [`FeatureRequiresPSU`](/docs/errors/features#feature-requires-psu)
+
+## [Identifications](/docs/errors/identifications)
+
+* [`IdentificationNotFound`](/docs/errors/identifications#identification-not-found)
+* [`LastIdentificationDeletionFailed`](/docs/errors/identifications#last-identification-deletion-failed)
+* [`LastRequiredIdentificationDeletionFailed`](/docs/errors/identifications#last-required-identification-deletion-failed)
+* [`LastIdentificationSetFor2FAFailed`](/docs/errors/identifications#last-identification-set-for2-fa-failed)
+* [`LastIdentificaUpdateSecondFactorUnverifiedtionSetFor2FAFailed`](/docs/errors/identifications#update-second-factor-unverified)
