--- a/docs/errors/identifications.mdx
+++ b/docs/errors/identifications.mdx
@@ -1,16 +1,16 @@
 ---
-title: Comms errors
-description: An index of Clerk errors related to comms.
+title: Identification errors
+description: An index of Clerk errors related to identification, such as phone numbers and email addresses.
 type: reference
 ---
 
-# Comms errors 
+# Identification errors
 
-An index of Clerk errors related to comms.
+An index of Clerk errors related to identification, such as phone numbers and email addresses.
 
 ## `IdentificationNotFound`
 
-Signifies an error when comm is not found.
+Signifies an error when an identification is not found.
 
 ```json
 {
@@ -22,7 +22,7 @@ Signifies an error when comm is not found.
 
 ## `LastIdentificationDeletionFailed`
 
-Signifies an error when trying to delete the last identification associated with a user.
+Signifies an error when trying to delete an identification associated with a user, but it is the last one associated with the user. The user must have at least one identification associated with their account at all times.
 
 ```json
 {
@@ -34,6 +34,8 @@ Signifies an error when trying to delete the last identification associated with
 
 ## `LastRequiredIdentificationDeletionFailed`
 
+Signifies an error when trying to delete an identification associated with a user, but it is the last one associated with the user. The user must have at least one identification associated with their account at all times.
+
 ```json
 {
     "shortMessage": "Deleting your last <sanitizedIdentType> is prohibited",
@@ -44,6 +46,8 @@ Signifies an error when trying to delete the last identification associated with
 
 ## `LastIdentificationSetFor2FAFailed`
 
+Signifies an error when trying to set the only identification associated with the user as a second factor. The user must have at least two identifications associated with their account before they can set one as a second factor.
+
 ```json
 {
     "shortMessage": "Update failed",
@@ -53,6 +57,8 @@ Signifies an error when trying to delete the last identification associated with
 ```
 
 ## `UpdateSecondFactorUnverified`
+
+Signifies an error when trying to update second factor attributes for an identification that is not verified. The identification must be verified before it can be used as a second factor.
 
 ```json
 {
